--- a/ProjectDiamondShop/Views/Home/HomePage.cshtml
+++ b/ProjectDiamondShop/Views/Home/HomePage.cshtml
@@ -81,6 +81,36 @@
                 border: none;
                 font-size: 20px;
             }
+
+
+        .fixed-button {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+            text-align: center;
+            text-decoration: none;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+            .fixed-button:hover {
+                background-color: #0056b3;
+            }
+
+            .fixed-button img {
+                width: 30px;
+                height: 30px;
+                vertical-align: middle;
+                margin-right: 8px;
+            }
     </style>
 </head>
 <body>
@@ -276,6 +306,12 @@
                 <!--End diamond Search-->
             </div>
         </div>
+        <button class="fixed-button" onclick="goToFAQ()"> FAQ  </button>
+        <script>
+            function goToFAQ() {
+                window.location.href = '@Url.Action("FAQ", "Home")'; // Thay đổi URL thành trang FAQ của bạn
+            }
+        </script>
     </main>
 
     <footer class="footer">
@@ -331,9 +367,9 @@
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script>
     $(document).ready(function () {
         var successMessage = '@ViewBag.SuccessMessage';
         var userName = '@ViewBag.UserName';
@@ -463,7 +499,7 @@
         console.log('OK button clicked')
         $('#loginSuccessModal').modal('hide');
     });
-    </script>
+        </script>
 
 </body>
 </html>
