--- a/ProjectDiamondShop/Views/Order/UpdateOrderDetails.cshtml
+++ b/ProjectDiamondShop/Views/Order/UpdateOrderDetails.cshtml
@@ -90,78 +90,78 @@
             </div>
         }
 
-        <div class="box">
-            <h2> Update Order Status</h2>
+    <div class="box">
+        <h2> Update Order Status</h2>
 
 
-            <div class="status-progress">
-                @{
-                    var statuses = new List<string> { "Order Placed", "Preparing Goods", "Shipped to Carrier", "In Delivery", "Delivered", "Paid" };
-                    bool isCompleted = true; // Đặt là true để đánh dấu các trạng thái trước đó là hoàn thành
-                }
-
-                @foreach (var status in statuses)
-                {
-                    if (status == order.status)
-                    {
-                        isCompleted = false; // Khi đến trạng thái hiện tại, không cần đánh dấu hoàn thành nữa
-                    }
-                    string statusClass = isCompleted || status == order.status ? "completed" : "";
-                    string iconClass = "";
-
-                    switch (status)
-                    {
-                        case "Order Placed":
-                            iconClass = "fas fa-shopping-cart icon";
-                            break;
-                        case "Preparing Goods":
-                            iconClass = "fas fa-box icon";
-                            break;
-                        case "Shipped to Carrier":
-                            iconClass = "fas fa-truck icon";
-                            break;
-                        case "In Delivery":
-                            iconClass = "fas fa-shipping-fast icon";
-                            break;
-                        case "Delivered":
-                            iconClass = "fas fa-box-open icon";
-                            break;
-                        case "Paid":
-                            iconClass = "fas fa-receipt icon";
-                            break;
-                    }
-                    <div class="status-item @statusClass">
-                        <i class="@iconClass"></i>
-                        <div class="bar"></div>
-                        <span class="status-text">@status</span>
-                    </div>
-                }
-            </div>
-            @if (roleId == 4 || roleId == 5)
-            {
-                <form action="@Url.Action("UpdateStatus", "Order")" method="post">
-                    @Html.AntiForgeryToken()
-                    <input type="hidden" name="orderId" value="@order.orderID" />
-                    <div class="form-group">
-                        <label for="status">Update Status</label>
-                        <select class="form-control" id="status" name="status">
-                            @if (roleId == 5)
-                            {
-                                <option value="Order Placed">Order Placed</option>
-                                <option value="Preparing Goods">Preparing Goods</option>
-                                <option value="Shipped to Carrier">Shipped to Carrier</option>
-                                <option value="Paid">Paid</option>
-                            }
-                            else if (roleId == 4)
-                            {
-                                <option value="In Delivery">In Delivery</option>
-                                <option value="Delivered">Delivered</option>
-                            }
-                        </select>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Update Status</button>
-                </form>
+        <div class="status-progress">
+            @{
+                var statuses = new List<string> { "Order Placed", "Preparing Goods", "Shipped to Carrier", "In Delivery", "Delivered", "Paid" };
+                bool isCompleted = true; // Đặt là true để đánh dấu các trạng thái trước đó là hoàn thành
             }
+
+            @foreach (var status in statuses)
+            {
+                if (status == order.status)
+                {
+                    isCompleted = false; // Khi đến trạng thái hiện tại, không cần đánh dấu hoàn thành nữa
+                }
+                string statusClass = isCompleted || status == order.status ? "completed" : "";
+                string iconClass = "";
+
+                switch (status)
+                {
+                    case "Order Placed":
+                        iconClass = "fas fa-shopping-cart icon";
+                        break;
+                    case "Preparing Goods":
+                        iconClass = "fas fa-box icon";
+                        break;
+                    case "Shipped to Carrier":
+                        iconClass = "fas fa-truck icon";
+                        break;
+                    case "In Delivery":
+                        iconClass = "fas fa-shipping-fast icon";
+                        break;
+                    case "Delivered":
+                        iconClass = "fas fa-box-open icon";
+                        break;
+                    case "Paid":
+                        iconClass = "fas fa-receipt icon";
+                        break;
+                }
+                <div class="status-item @statusClass">
+                    <i class="@iconClass"></i>
+                    <div class="bar"></div>
+                    <span class="status-text">@status</span>
+                </div>
+            }
+        </div>
+        @if (roleId == 4 || roleId == 5)
+        {
+            <form action="@Url.Action("UpdateStatus", "Order")" method="post">
+                @Html.AntiForgeryToken()
+                <input type="hidden" name="orderId" value="@order.orderID" />
+                <div class="form-group">
+                    <label for="status">Update Status</label>
+                    <select class="form-control" id="status" name="status">
+                        @if (roleId == 5)
+                        {
+                            <option value="Order Placed">Order Placed</option>
+                            <option value="Preparing Goods">Preparing Goods</option>
+                            <option value="Shipped to Carrier">Shipped to Carrier</option>
+                            <option value="Paid">Paid</option>
+                        }
+                        else if (roleId == 4)
+                        {
+                            <option value="In Delivery">In Delivery</option>
+                            <option value="Delivered">Delivered</option>
+                        }
+                    </select>
+                </div>
+                <button type="submit" class="btn btn-primary">Update Status</button>
+            </form>
+        }
             <div class="back-button">
                 @if (roleId == 1)
                 {
@@ -184,6 +184,62 @@
             </div>
         </div>
 
+        <div class="box">
+            <div class="table-container">
+                <table id="currentOrdersTable" class="table table-striped table-bordered table-dark">
+                    <thead>
+                        <tr>
+                            <th>Order ID</th>
+                            <th>Customer</th>
+                            <th>Delivery Staff</th>
+                            <th>Paid Money</th>
+                            <th>Remaining Money</th>
+                            <th>Total Money</th>
+                            <th>Ship To</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>@order.orderID</td>
+                            <td>@order.customerName</td>
+                            <td>@order.deliveryStaffName</td>
+                            <td>$@String.Format("{0:N0}", order.paidAmount)</td>
+                            <td>
+                                @{
+                                    if (order.remainingAmount == 0)
+                                    {
+                                        @:complete
+                                    }
+                                    else
+                                    {
+                                        @String.Format("{0:N0}", order.remainingAmount)
+                                    }
+                                  }
+                            </td>
+                            <td>$@String.Format("{0:N0}", order.totalMoney)</td>
+                            <td>@order.address</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div class="back-button">
+                    @if (roleId == 1 && order.status == "In Delivery")
+                    {
+                        if (order.remainingAmount != 0)
+                        {
+                            <form action="@Url.Action("PaymentWithPaypal2", "Order")" method="get">
+                                <input type="hidden" name="orderId" value="@order.orderID" />
+                                <button type="submit" class="btn btn-success">Complete the remaining amount of the order</button>
+                            </form>
+                        }
+                         else
+                        {
+                            <h3 style="color: #F9F995;">You have complete payment!!</h3>
+                        }
+
+                    }
+                </div>
+            </div>
+        </div>
         <div class="box">
             <h2>Order Items</h2>
             @if (orderItems != null && orderItems.Any())
