warranty sua tiep theo

--- a/ProjectDiamondShop/Views/DeliveryStaff/DeliveryStaff.cshtml
+++ b/ProjectDiamondShop/Views/DeliveryStaff/DeliveryStaff.cshtml
@@ -214,6 +214,7 @@
                                 <th class="wide-column">Customer</th>
                                 <th class="wide-column">Delivery Staff</th>
                                 <th class="wide-column">Total Money</th>
+                                <th class="wide-column">Ship To</th>
                                 <th class="wide-column">Status</th>
                                 <th class="wide-column">PaidStatus</th>
                                 <th class="wide-column">Note</th>
@@ -247,7 +248,8 @@
                                     <td>@order.customerName</td>
                                     <td>@order.deliveryStaffName</td>
                                     <td>$@String.Format("{0:N0}", order.totalMoney)</td>
-                                    <td style="color: @backgroundColor; font-weight:900;" >@order.status</td>
+                                    <td>@order.address</td>
+                                    <td style="color: @backgroundColor; font-weight:900;">@order.status</td>
                                     <td>@order.paymentStatus</td>
                                     <td>@order.Note</td>
                                     <td>
