--- a/ProjectDiamondShop/Views/SaleStaff/SaleStaff.cshtml
+++ b/ProjectDiamondShop/Views/SaleStaff/SaleStaff.cshtml
@@ -258,9 +258,11 @@
                                 <th class="wide-column">Customer</th>
                                 <th class="wide-column">Delivery Staff</th>
                                 <th class="wide-column">Total Money</th>
+                                <th class="wide-column">Ship To</th>
                                 <th class="wide-column">Status</th>
                                 <th class="wide-column">PaidStatus</th>
                                 <th class="wide-column">Note</th>
+                                <th class="wide-column">Warranty Code</th>
                                 <th class="wide-column">Actions</th>
                             </tr>
                         </thead>
@@ -291,9 +293,17 @@
                                     <td>@order.customerName</td>
                                     <td>@order.deliveryStaffName</td>
                                     <td>$@String.Format("{0:N0}", order.totalMoney)</td>
+                                    <td>@order.address</td>
                                     <td style="color: @backgroundColor; font-weight:900;">@order.status</td>
                                     <td>@order.paymentStatus</td>
                                     <td>@order.Note</td>
+                                    <td>
+                                        @{
+                                            var warrantyCodes = ViewBag.Warranties[order.orderID];
+                                            var warrantyCodesStr = string.Join(" || ", warrantyCodes);
+                                        }
+                                        @warrantyCodesStr
+                                    </td>
                                     <td>
                                         <form action="@Url.Action("Process", "SaleStaff")" method="post" style="display:inline;">
                                             @Html.AntiForgeryToken()
